# TBAD-CFD-Visualization

./: LICENSE  README.md  ad_environment.yml
analysis/paraview/src/: _paraview_config.py  example.ini  paraview_analyze.py  paraview_calc.py  paraview_display.py  paraview_slices.py  paraview_utils.py
analysis/paraview/test_data/slices/: p1_slices.tsv  p2_slices.tsv  p3_slices.tsv
analysis/range/src/: patient.py  patient_info.tsv  range_analyze.py
analysis/range/test/test_converted_res_dir/: all_results-averages-from_cm-to-mmHg-L_per_min.txt  all_results-flows.txt  all_results-pressures.txt
analysis/range/test/test_svfsi_converted_res_dir/: B_FS_Pressure_average.txt  B_FS_Velocity_flux.txt
analysis/range/test_converted_res_dir/: all_results-averages.txt  all_results-flows.txt  all_results-pressures.txt
compflow/: CMakeLists.txt  Copyright-SimVascular.txt
compflow/src/: compute_flow.cxx
mesh_prep/obj_to_vtp/src/: convert_obj_to_vtp.py  convert_txt_to_mdl.py  face_names_template.txt  get_face_names.py  template.mdl
mesh_prep/separate_flap/src/: paraview_calc.py  paraview_separate_flap.py  paraview_utils.py
mesh_prep/separate_flap/test/test_1/mesh/test_solid-mesh-complete/mesh-surfaces/: solid_wall_inner.vtp  solid_wall_outer.vtp
rcr_prep/: get_rcr.py  outlet_flow_fractions_bm.txt  outlet_names.txt  outlet_order_p2.txt  test_svFSI_CYc.inp
